# quickcheck-simple

./: README.md  quickcheck-simple.cabal  stack.yaml
test/: Runner.hs  Tests.hs
