name:                quickcheck-simple
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/quickcheck-simple#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

test-suite test
  type:                exitcode-stdio-1.0
  default-extensions:  OverloadedStrings, TemplateHaskell
  other-modules:       Tests
  main-is:             Runner.hs
  hs-source-dirs:      test
  build-depends:       base
                     , checkers
                     , props
                     , QuickCheck
                     , quickcheck-instances
                     , quickcheck-special
                     , quickcheck-unicode
                     , test-invariant
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/quickcheck-simple
